tests/NormalTests/paczka1/fuzzy1/88776890.err
Error in line 5: WFKhDja A940 1,45
Error in line 10: s2XorL A282 71,4
Error in line 6: WFKhDja A940 1,1
Error in line 18: WFKhDja A282 40,3
